# printshawp

./: .gitignore  README.md  printshawp.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: lint.yml
