[project]
name = "printshawp"
dynamic = ["version"]
description = "Impose a PDF as a single-signature saddle-stitch booklet, ready for duplex printing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pikepdf>=8.0",
]

[project.scripts]
printshawp = "printshawp:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
include = ["printshawp.py"]
